2006-08-14  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* modmgr.cc: Added two path macros to mod cfg files: '__MODS__' and
	  '__MOD_PATH__'. They are expanded, respectivelly, to the game's '<MODS>'
	  dir and to the mod's '<MODS>/<mod_title>' (where '<mod_title>' is the
	  mod's cfg option, defaulting to the filename -- sans extension -- of
	  said cfg).
	* schedule.cc: Slightly tweaked the 'talk' schedule. NPCs will no longer
	  try to talk through mountains.
	* ucsym.*, ucparse.yy, ucfun.h: Fixed bug #1540599. Now, declaring functions
	  through externs and directly will always assign the same function number
	  in both cases (and regardless of order) as long as both have the same
	  number of parameters (and whether or not autonumbering -- either style --
	  is being used). Duplicate declarations (but not duplicate externs, unless
	  the parameter count differs) will raise errors now.

2006-08-14  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Setting bg_dont_move and dont_move flags prevent actors from doing any
	  schedule actions while the flag is set.

2006-08-13  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* objs.cc: Fixed cache-out bug of terrain objects when the whole map is cached
	  out (mostly when teleporting to another map).
	* exult.cc, exultmenu.cc: Fixed a palette problem when loading a game with
	  command-line parameters with 'skip_splash' disabled. Also, fixed the initial
	  Exult logo in the menu.
	* modmgr.cc: Remove trailing slashes before adding "<MODS>" system path for
	  each game.

2006-08-08  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* exult.cc, exultmenu.cc: Added a Zaurus version of the menu -- single
	  column, only 3 games/mods per page and no Exult logo in the back (as it
	  interferes with menu) -- due to resolution constraints. Also fixed dumb
	  mistake when loading a game with --bg or --si.

2006-08-07  Marzo Sette Torres Junior <marzojr@yahoo.com>