@@ -23,10 +23,10 @@ SDL_IMAGE_LIBS=-L$(SRC)/sdl/lib -lmingw32 -lSDLmain -lSDL_image -lSDL -lpng -ljp
 ### Zip File support. Comment out if ZLib isn't installed
 ### Modify paths, if required
 ZIP_CFLAGS=-I$(SRC)/zlib -DHAVE_ZIP_SUPPORT
-ZIP_LIBS=-L$(SRC)/zlib -lz
+ZIP_LIBS=-L$(SRC)/zlib -Wl,-Bstatic -lz -Wl,-Bdynamic
 
 # Leave this option empty
-EXTRA_OPTIONS=
+EXTRA_OPTIONS=-DDEBUG -DSHOW_USECODE_CONTAINER
 
 CPPFLAGS=-DVERSION=\"$(VERSION)\" -DEXULT_DATADIR=\"data\" \
 	-DSIZEOF_SHORT=2 -DSIZEOF_INT=4 -I$(SRC)/imagewin -I$(SRC)/shapes \
