@@ -215,7 +215,7 @@ using std::getline;
 #include "../actions.h"
 #include "../actors.h"
 #include "../args.h"
-#include "../bggame.h"
+#include "../gamemgr/bggame.h"
 #include "../browser.h"
 #include "../cheat.h"
 #include "../cheat_screen.h"
@@ -249,7 +249,7 @@ using std::getline;
 #include "../schedule.h"
 #include "../segfile.h"
 #include "../shapeid.h"
-#include "../sigame.h"
+#include "../gamemgr/sigame.h"
 #include "../tiles.h"
 #include "../tqueue.h"
 #include "../txtscroll.h"
